--- a/api-consumer-app/index.html
+++ b/api-consumer-app/index.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Irene Sahun">
-    <title></title>
-</head>
-<body>
+    <title>api-consumer-app</title>
+  </head>
+  <body>
 
-  
-    <script type="module" src="/src/main.js"></script>
-</body>
+
+
+  </body>
 </html>
