--- a/api-consumer-app/index.html
+++ b/api-consumer-app/index.html
@@ -2,48 +2,64 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link href="/src/style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Irene Sahun">
-    <title>api-consumer-app</title>
+    <title>API Consumer App | Fetch vs Axios</title>
+
+    <link href="/src/style.css" rel="stylesheet">
   </head>
+
   <body>
-    <div id="app" class="container">
+    <!-- Skip link -->
+    <a href="#main" class="sr-only">
+      Skip to main content
+    </a>
+
+    <div class="container">
       <header class="header">
         <h1 class="title">App de consum d'APIs</h1>
       </header>
-
-      <section class="controls" aria-label="Controls and interaction">
-        <label for="fetch-method" class="fetch-txt">Mètode de recuperació</label>
-        <select id="fetch-method" name="fetch-method">
-          <option value="fetch">Utilitza Fetch</option>
-          <option value="axios">Utilitza Axios</option>
-        </select>
-
-        <label for="search-input" class="search-txt">Cerca</label>
-        <input id="search-input" type="search" placeholder="Introdueix text per cercar"/>
-
-        <button id="fetch-btn" type="button">Mostra dades</button>
-      </section>
   
-      <main class="app-main">
-        <div id="loading" role="status" aria-live="polite" class="loading">Carregant...</div>
+      <main id="main" class="app-main">
 
-        <div id="error" role="alert" class="error" hidden></div>
+        <!-- Controls -->
+        <section class="controls" aria-labelledby="controls-heading">
+          <!-- Heading -->
+          <h2 id="controls-heading" class="sr-only">Panell de control</h2>
+          
+          <!-- Selector -->
+          <label for="fetch-method" class="fetch-txt">Mètode de recuperació</label>
+          <select id="fetch-method" name="fetch-method">
+            <option value="fetch">Utilitza Fetch</option>
+            <option value="axios">Utilitza Axios</option>
+          </select>
 
+          <!-- Input -->
+          <label for="search-input" class="search-txt">Cerca</label>
+          <input id="search-input" type="search" placeholder="Introdueix text per cercar">
+
+          <!-- Show data -->
+          <button id="fetch-btn" type="button">Mostra dades</button>
+        </section>
+
+        <!-- Loading -->
+        <div id="loading" role="status" aria-live="polite" class="loading hidden">Carregant...</div>
+
+        <!-- Error -->
+        <div id="error" role="alert" class="error hidden"></div>
+
+        <!-- Results -->
         <section id="results" class="results" aria-live="polite"></section>
 
-        <nav id="pagination" class="pagination" aria-label="Paginació">
-          <button class="page-btn" data-page="prev" type="button">Anterior</button>
+        <!-- Page navigator -->
+        <nav id="pg-nav" class="pg-nav" aria-label="Navegació entre pàgines">
+          <button id="prev-btn" class="page-btn" data-page="prev" type="button">Anterior</button>
           <div class="pages"></div>
-          <button class="page-btn" data-page="next" type="button">Següent</button>
+          <button id="next-btn" class="page-btn" data-page="next" type="button">Següent</button>
         </nav>
-      </main>
-      
-      <a href="#main" class="sr-only">
-          Skip to main content
-      </a>
+      </main>    
     </div>
+  
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
